release 2024 r1